--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.metsakuur.lemondemo.CommonHeader
+        <kr.go.namwon.seniorcenter.app.CommonHeader
             android:id="@+id/customHeader"
             android:layout_width="match_parent"
             android:layout_height="60dp"
